rspec-tools/tests/resources/invalid-rules/S200/cobol/rule.adoc
== Why is this an issue?
== How to fix it?
=== Pitfalls
=== How to fix it in Razor
=== How does this work?
=== Going the extra mile
=== Pitfalls


